# papion-ai-bot

./: README.md  pyproject.toml
app/: config.py  run.py
app/common/: cmd_list.py  texts.py
app/database/: dao.py  init.py  models.py
app/filters/: admin.py  chat_type.py
app/handlers/: admin_private.py  commands.py  get_random_recipe.py  get_recipe.py  get_recipe_by_ings.py  user_private.py
app/keyboards/: inline.py  reply.py
app/middlewares/: db.py
app/services/: gpt_free.py  gpt_openai.py
