[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["LevBratisman <leobratisman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"
openai = "^1.16.2"
g4f = {extras = ["webdriver"], version = "^0.2.8.2"}
nest-asyncio = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
